feat: updated sidebar responsiveble and bakcend integration for edit form

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,10 +16,17 @@
   }
 }
 
-* {
+/* @font-face {
+  font-family: "Poppins";
+  src: url(sansation_light.woff);
+} */
+
+* , body{
   font-family: "Poppins";
   font-style: normal;
 }
+
+
 
 body {
   color: rgb(var(--foreground-rgb));
