feat: updated expansion list component and dleted component profile button dropdown

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,9 @@
   font-style: normal;
 }
 
-
+.react-dropdown-select-dropdown-handle {
+  display: none; 
+}
 
 body {
   color: rgb(var(--foreground-rgb));
