fix : fixed ui bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -63,7 +63,7 @@ body {
 /* button header toolbbar calendar custom */
 
 .fc-day-today {
-  background:#D6DFF3 !important;
+  background:#ebf1ff !important;
   border: none !important;
 
 } 
