--- a/app/globals.css
+++ b/app/globals.css
@@ -61,6 +61,10 @@ body {
 
 /* button header toolbbar calendar custom */
 
+.fc-header-toolbar .fc-toolbar .fc-toolbar-ltr{
+  background-color: red !important;
+  }
+
 .fc-day-today {
   background:#ebf1ff !important;
   border: none !important;
@@ -115,6 +119,30 @@ body {
   border: 0px;
 }
 
+@media (min-width: 400px) {
+  .fc-toolbar-title {
+    font-size: 12px !important;
+    }
+    
+  .fc-prev-button , .fc-next-button , .fc-today-button{
+      font-size: 12px !important;  
+    }
+      
+  .fc-header-toolbar{
+    width: 200vw !important;
+    
+    }
+
+
+  .fc-button-group{     
+      font-size: 12px !important;  
+  }
+
+  .fc-dayGridMonth-view {
+    width: 200vw !important;
+  }
+  
+}
 
 @layer utilities {
   .text-balance {
