--- a/app/globals.css
+++ b/app/globals.css
@@ -119,20 +119,15 @@ body {
   border: 0px;
 }
 
-@media (min-width: 400px) {
+@media only screen and (max-width: 600px) {
   .fc-toolbar-title {
     font-size: 12px !important;
-    }
-    
-  .fc-prev-button , .fc-next-button , .fc-today-button{
-      font-size: 12px !important;  
     }
       
   .fc-header-toolbar{
     width: 200vw !important;
     
     }
-
 
   .fc-button-group{     
       font-size: 12px !important;  
