--- a/app/globals.css
+++ b/app/globals.css
@@ -119,6 +119,12 @@ body {
   border: 0px;
 }
 
+.css-1nmdiq5-menu{
+  display: none !important;
+}
+
+
+
 @media only screen and (max-width: 600px) {
   .fc-toolbar-title {
     font-size: 12px !important;
